Fixes #28414: Cropped text in branding settings preview

--- a/branding/src/main/style/media.scss
+++ b/branding/src/main/style/media.scss
@@ -127,10 +127,12 @@ label.input-group-text{
   .custom-bar{
     width: 100%;
     height:20px;
-    text-align: center;
     position: absolute;
     top: 0;
     left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     & > span{
       font-size: 12px;
